# music-chore

./: .gitignore  AGENTS.md  AGENT_INSTRUCTIONS.md  APP_SPEC.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  HELP.md  INITIALIZER_AGENT.md  LICENSE  QWEN.md  README.md  REFACTORING_PLAN.md  SKILL.md  TESTING_PLAN.md  UNIT_TEST_SPECIFICATIONS.md  agent-progress.txt  create_no_metadata_flac.rs  create_test_cli.py  create_test_files.rs  create_test_flac.py  create_test_lowercase.py  create_test_mp3.py  create_test_wav.py  feature_list.yml  init.sh  install_mcp.sh  opencode.json  refactoring_plan.md  test_normalize.rs
.claude/: settings.local.json
.claude/plans/: nested-dancing-beaver.md
.github/workflows/: rust.yml  test.yml
docs/: MCP_CONFIG_EXAMPLES.md  MCP_SERVER.md  MUSICCTL.md
examples/: LISTEN_NOW.md  WEB_PERFECT_MATCH.md
prompts/: AGENT_INSTRUCTIONS.md  APP_SPEC.md  INITIALIZER_AGENT.md  MUSIC_LIBRARY_ORGANIZER_PROMPT.md  USEFUL_THOUGHTS.md  feature_list.yml
skills/: README.md
skills/album-tonight/: SKILL.md
skills/decision-duel/: SKILL.md
skills/library-maintenance/: SKILL.md
skills/listen-now/: SKILL.md
skills/quick-pick/: SKILL.md
skills/rediscovery-rotation/: SKILL.md
skills/web-genre-scout/: SKILL.md
skills/web-mood-match/: SKILL.md
skills/web-perfect-match/: SKILL.md
src/: lib.rs  main.rs  mcp_server.rs
src/adapters/: mod.rs
src/cli/: commands.rs  commands_processor.rs  mod.rs
src/core/: builders.rs  config.rs  configuration.rs  errors.rs  logging.rs  mod.rs  types.rs
src/domain/: album.rs  artist.rs  library.rs  (+9 more)
test_plans/: CLI_MANUAL_TEST_PLAN.md  MCP_MANUAL_TEST_PLAN.md
tests/: apply_metadata_tests.rs  bracket_format_tests.rs  builders_tests.rs  checksum_tests.rs  cli_validate_tests.rs  cli_write_dry_run.rs  config_module_tests.rs  configuration_tests.rs  data_structure_tests.rs  duplicates_service_tests.rs  edge_case_tests.rs  error_module_tests.rs  error_refactoring_tests.rs  flac_metadata_roundtrip_tests.rs  flac_metadata_tests.rs  format_registry_tests.rs  format_tree_comprehensive_tests.rs  format_tree_comprehensive_tests_fixed.rs  format_tree_tests.rs  hierarchy_tests.rs  inference_year_tests.rs  library_serialization_tests.rs  library_tests.rs  m4a_integration_tests.rs  mcp_integration_c_tests.rs  mcp_integration_tests.rs  mcp_server_tests.rs  metadata_refactoring_tests.rs  mod.rs  mp3_integration_tests.rs  normalization_extended_tests.rs  normalization_tests.rs  normalize_extended_fields_tests.rs  normalize_integration_tests.rs  ogg_integration_tests.rs  scanner_depth_pattern_tests.rs  scanner_extended_tests.rs  scanner_skip_metadata_tests.rs  scanner_tests.rs  test_cue_command.rs  (+11 more)
(+72 files in other folders)
