[package]
name = "music-chore"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "musicctl"
path = "src/main.rs"

[[bin]]
name = "musicctl-mcp"
path = "src/bin/musicctl-mcp.rs"

[dependencies]
walkdir = "2"
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
lofty = "0.22.4"
tokio = { version = "1.0", features = ["full"] }
rmcp = { version = "0.14.0", features = [
    "server",
    "macros",
    "client",
    "transport-io",
    "transport-child-process",
    "transport-streamable-http-server",
    "auth",
    "elicitation",
    "schemars",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
env_logger = "0.11"
log = "0.4"
anyhow = "1.0"
schemars = "1.2.0"

[dev-dependencies]
tempfile = "3"
