[package]
name = "music-chore"
version = "0.2.3"
edition = "2024"

[[bin]]
name = "musicctl"
path = "src/bin/musicctl.rs"

[[bin]]
name = "musicctl-mcp"
path = "src/bin/musicctl-mcp.rs"

[[bin]]
name = "create-no-metadata-flac"
path = "src/bin/create_no_metadata_flac.rs"

[dependencies]
walkdir = "2"
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
lofty = "0.22"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.14", features = [
    "server",
    "macros",
    "client",
    "transport-io",
    "transport-child-process",
    "transport-streamable-http-server",
    "schemars",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
env_logger = "0.11"
log = "0.4"
anyhow = "1"
schemars = "1.2.0"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
