[package]
name = "music-chore"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "musicctl"
path = "src/bin/musicctl.rs"

[[bin]]
name = "musicctl-mcp"
path = "src/bin/musicctl-mcp.rs"

[dependencies]
atty = "0.2"
walkdir = "2"
serde_json = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
lofty = "0.22"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.14", features = [
    "server",
    "macros",
    "client",
    "transport-io",
    "transport-child-process",
    #  "transport-streamable-http-server",
    "schemars",
] }
#
env_logger = "0.11"
log = "0.4"
schemars = "1.2.1"
sha2 = "0.10"
glob = "0.3"
dsf="0.2.2"
id3 = "1.16.4"

[lints.rust]
unused_imports = "allow"

[dev-dependencies]
tempfile = "3"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }